@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding='UTF-8'?>
 <!DOCTYPE catalog PUBLIC "-//Cail Lomecb//DTD Colorer CATALOG take5//EN"
-  "http://colorer.sf.net/2003/catalog.dtd">
+  "http://colorer.sf.net/2003/catalog.dtd"[
+
+<!ENTITY catalog-console SYSTEM "hrd/catalog-console.xml">
+<!ENTITY catalog-rgb SYSTEM "hrd/catalog-rgb.xml">
+<!ENTITY catalog-text SYSTEM "hrd/catalog-text.xml">
+
+]>
 
 <catalog xmlns="http://colorer.sf.net/2003/catalog"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -8,44 +14,54 @@
                              http://colorer.sf.net/2003/catalog.xsd">
 
   <hrc-sets>
+
     <location link="hrc/proto.hrc"/>
+    
     <location link="hrc/auto/ccsql.hrc"/>
-    <location link="hrc/auto/farmanager.hrc"/>
+    <location link="hrc/auto/far.hrc"/>
     <location link="hrc/auto/gen.hrc"/>
     <location link="hrc/auto/litestep.hrc"/>
     <location link="hrc/auto/qrm.hrc"/>
     <location link="hrc/auto/rare-scripts.hrc"/>
     <location link="hrc/auto/vim.hrc"/>
+
   </hrc-sets>
 
-  <hrd-sets>
-    <hrd class="rgb" name="default" description="White (crimsoned)">
-      <location link="hrd/rgb/white.hrd"/>
-    </hrd>
-    <hrd class="rgb" name="navy" description="Navy (seashore)">
-      <location link="hrd/rgb/navy.hrd"/>
-    </hrd>
-    <hrd class="rgb" name="eclipse" description="A'la Eclipse (minimal)">
-      <location link="hrd/rgb/eclipse.hrd"/>
-    </hrd>
-    <hrd class="rgb" name="neo" description="Neo (and Morpheus)">
-      <location link="hrd/rgb/neo.hrd"/>
-    </hrd>
-    <hrd class="rgb" name="black"  description="Black (scarlet)">
-      <location link="hrd/rgb/black.hrd"/>
-    </hrd>
-    <hrd class="rgb" name="grayscale" description="Grayscale (colour neutral)">
-      <location link="hrd/rgb/grayscale.hrd"/>
-    </hrd>
-    <hrd class="rgb" name="fmx" description="FMX">
-      <location link="hrd/rgb/contrib/fmx.hrd"/>
-    </hrd>
-    <hrd class="rgb" name="hs" description="A'la HomeSite">
-      <location link="hrd/rgb/hs.hrd"/>
-    </hrd>
-    <hrd class="rgb" name="bred3" description="Bred3 colors">
-      <location link="hrd/rgb/contrib/bred3.hrd"/>
-    </hrd>
-  </hrd-sets>
+  &catalog-rgb;
 
 </catalog>
+<!-- ***** BEGIN LICENSE BLOCK *****
+   - Version: MPL 1.1/GPL 2.0/LGPL 2.1
+   -
+   - The contents of this file are subject to the Mozilla Public License Version
+   - 1.1 (the "License"); you may not use this file except in compliance with
+   - the License. You may obtain a copy of the License at
+   - http://www.mozilla.org/MPL/
+   -
+   - Software distributed under the License is distributed on an "AS IS" basis,
+   - WITHOUT WARRANTY OF ANY KIND, either express or implied. See the License
+   - for the specific language governing rights and limitations under the
+   - License.
+   -
+   - The Original Code is the Colorer Library.
+   -
+   - The Initial Developer of the Original Code is
+   - Cail Lomecb <cail@nm.ru>.
+   - Portions created by the Initial Developer are Copyright (C) 1999-2005
+   - the Initial Developer. All Rights Reserved.
+   -
+   - Contributor(s):
+   -
+   - Alternatively, the contents of this file may be used under the terms of
+   - either the GNU General Public License Version 2 or later (the "GPL"), or
+   - the GNU Lesser General Public License Version 2.1 or later (the "LGPL"),
+   - in which case the provisions of the GPL or the LGPL are applicable instead
+   - of those above. If you wish to allow use of your version of this file only
+   - under the terms of either the GPL or the LGPL, and not to allow others to
+   - use your version of this file under the terms of the MPL, indicate your
+   - decision by deleting the provisions above and replace them with the notice
+   - and other provisions required by the LGPL or the GPL. If you do not delete
+   - the provisions above, a recipient may use your version of this file under
+   - the terms of any one of the MPL, the GPL or the LGPL.
+   -
+   - ***** END LICENSE BLOCK ***** -->
